--- a/app/assets/stylesheets/font-awesome.css.scss.erb
+++ b/app/assets/stylesheets/font-awesome.css.scss.erb
@@ -6,8 +6,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: font-url('fontawesome-webfont.eot?v=4.0.3');
-  src: font-url('fontawesome-webfont.eot?#iefix&v=4.0.3') format('embedded-opentype'), font-url('fontawesome-webfont.woff?v=4.0.3') format('woff'), font-url('fontawesome-webfont.ttf?v=4.0.3') format('truetype'), font-url('fontawesome-webfont.svg?v=4.0.3#fontawesomeregular') format('svg');
+  src: font-url('fontawesome-webfont.eot');
+  src: font-url('fontawesome-webfont.eot#iefix') format('embedded-opentype'), font-url('fontawesome-webfont.woff') format('woff'), font-url('fontawesome-webfont.ttf') format('truetype'), font-url('fontawesome-webfont.svg#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -1335,4 +1335,25 @@
 }
 .fa-plus-square-o:before {
   content: "\f196";
+}
+.fa-bathtub:before, .fa-s15:before, .fa-bath:before {
+    content: "\f2cd";
+}
+.fa-hotel:before, .fa-bed:before {
+    content: "\f236";
+}
+.fa-glass:before {
+    content: "\f000";
+}
+.fa-recycle:before {
+    content: "\f1b8";
+}
+.fa-wifi:before {
+    content: "\f1eb";
+}
+.fa-automobile:before, .fa-car:before {
+    content: "\f1b9";
+}
+.fa-heartbeat:before {
+    content: "\f21e";
 }
