--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1524,6 +1524,9 @@ ul.social_icons li  a i{
   height: 84px;
   margin-top: 110px;
 }
+#footer{
+  border-top: 5px solid #C52D2F;
+}
 
 .footer_left {
   padding: 10px;
