front page finished with dependency

--- a/app/views/main/index.html
+++ b/app/views/main/index.html
@@ -100,8 +100,8 @@
                         <div class="row slide-margin">
                             <div class="col-sm-6">
                                 <div class="carousel-content">
-                                    <h1 class="animation animated-item-1">Quality food served by best cooks in Pokhara valley</h1>
-                                    <h2 class="animation animated-item-2">Taking considration to the full enjoyment of our customers we... </h2>
+                                    <h1 class="animation animated-item-1">Enjoy the environment</h1>
+                                    <h2 class="animation animated-item-2">Enjoy the serinity of the environment with Goodluck. The majestic himalays and beautiful fishes...</h2>
                                     <a class="btn-slide animation animated-item-3" href="#">Read More</a>
                                 </div>
                             </div>
@@ -121,8 +121,8 @@
                         <div class="row slide-margin">
                             <div class="col-sm-6">
                                 <div class="carousel-content">
-                                    <h1 class="animation animated-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-                                    <h2 class="animation animated-item-2">Accusantium doloremque laudantium totam rem aperiam, eaque ipsa...</h2>
+                                    <h1 class="animation animated-item-1">Quality food served by best cooks in Pokhara valley</h1>
+                                    <h2 class="animation animated-item-2">Taking considration to the full enjoyment of our customers we... </h2>
                                     <a class="btn-slide animation animated-item-3" href="#">Read More</a>
                                 </div>
                             </div>
@@ -142,8 +142,8 @@
                         <div class="row slide-margin">
                             <div class="col-sm-6">
                                 <div class="carousel-content">
-                                    <h1 class="animation animated-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-                                    <h2 class="animation animated-item-2">Accusantium doloremque laudantium totam rem aperiam, eaque ipsa...</h2>
+                                    <h1 class="animation animated-item-1">We tend to conserve our heritage</h1>
+                                    <h2 class="animation animated-item-2">While you enjoy our world class cusines, we also try to mantain our Nepaleseness...</h2>
                                     <a class="btn-slide animation animated-item-3" href="#">Read More</a>
                                 </div>
                             </div>
